# STUPA-Workflow

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AUDIT-REPORT.md  CLAUDE.md  CONTRIBUTING.md  README.md  TASKS.md
admin-cli/: README.md  pyproject.toml
admin-cli/antragsplattform_admin/: __init__.py  app.py  config.py  db.py  ops.py  permissions.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.lock.txt
backend/app/: db.py  deps.py  logging_config.py  main.py  middleware.py  models.py  search.py  settings.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: branding.py  gremium_roles.py  models.py  router.py  schemas.py  service.py  site_config_service.py
backend/app/modules/antiabuse/: __init__.py  router.py
backend/app/modules/application_types/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/applications/: access.py  diff.py  models.py  router.py  schemas.py  service.py
backend/app/modules/audit/: __init__.py  actions.py  hashing.py  models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: bootstrap.py  mcp_router.py  models.py  oauth.py  oauth_models.py  oauth_router.py  oauth_service.py  oidc.py  principal.py  rbac.py  router.py  schemas.py  service.py  sessions.py  tokens.py
backend/app/modules/budget/: bank_import.py  bank_maintenance.py  bank_match.py  bank_service.py  fints_client.py  invoice_import.py  models.py  router.py  rules.py  schemas.py  service.py  stats.py  tree_models.py  tree_router.py  tree_rules.py  tree_schemas.py  tree_service.py
backend/app/modules/calendar/: __init__.py  ics.py  router.py  schemas.py  service.py
backend/app/modules/config_revision/: __init__.py  models.py  reapply.py  revert.py  router.py  schemas.py  service.py
backend/app/modules/deadlines/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/delegations/: __init__.py  models.py  (+3 more)
backend/app/shared/: __init__.py  altcha.py  antiabuse.py  config_schemas.py  crypto.py  errors.py  guards.py  i18n.py  jsonlogic.py  paging.py  permissions.py  ratelimit.py  xlsx.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_baseline.py  0001_core_extensions.py  0002_core_tables.py  0002_seed.py  0003_budget_fiscal_stichtag.py  0003_seed_roles.py  0004_budget_entry_and_views.py  0004_budget_fully_bound.py  0005_accounts_and_transfers.py  0005_audit_append_only.py  0005_seed_mail_templates.py  0005_voting_tables.py  0006_audit_append_only.py  0006_single_global_flow.py  0007_oauth_tokens.py  0007_voting_tables.py  0008_attachment_table.py  0008_meeting_and_vote_fk.py  0008_oauth_token_lifetime.py  0009_meeting_and_vote_fk.py  0009_transition_color.py  0010_admin_config_tables.py  0010_application_email_confirmed.py  0010_render_job_table.py  0011_protocol_rendering_status.py  0011_render_job_table.py  0012_protocol_tables.py  0012_vote_cancelled_status.py  0012_webhook_idempotency.py  0013_protocol_tables.py  0013_transition_requires_action.py  0014_deadline_table.py  0014_drop_pii_anonymization.py  0014_meeting_delegations.py  0015_drop_pii_anonymization.py  0015_notification_preferences.py  0015_role_assignment_tz.py  0016_granular_permissions.py  0016_notification_preferences.py  0016_role_assignment_deleg.py  (+68 more)
backend/scripts/: coverage_critical.py
backend/tests/: audit_fakes.py  auth_fakes.py  conftest.py  factories.py  files_fakes.py  flow_fakes.py  notifications_fakes.py  pdf_fakes.py  protocol_fakes.py  test_admin_branding.py  test_admin_principals_unit.py  test_admin_router.py  test_admin_service_unit.py  test_altcha.py  test_antiabuse.py  test_application_flow_resolution_unit.py  test_application_types_router.py  test_application_types_service_unit.py  test_applications_access.py  test_applications_diff.py  test_applications_router.py  test_applications_service_unit.py  test_attendance_service.py  test_audit_hashing.py  test_audit_router.py  test_audit_service_unit.py  test_auth_bootstrap.py  test_auth_models_metadata.py  test_auth_oidc.py  test_auth_principal.py  test_auth_rbac.py  test_auth_router.py  test_auth_service.py  test_auth_sessions.py  test_budget_invoice_import.py  test_budget_router.py  test_budget_rules.py  test_budget_service_unit.py  test_budget_stats_unit.py  test_budget_tree_router.py  (+84 more)
backend/tests/_support/: audit_fakes.py  files_fakes.py  flow_fakes.py  notifications_fakes.py  pdf_fakes.py  privacy_fakes.py  protocol_fakes.py
backend/tests/integration/: conftest.py  test_admin_service.py  test_antiabuse_redis.py  test_application_types_service.py  test_applications_service.py  test_audit_service.py  test_auth_concurrency.py  test_auth_db.py  test_budget_fits_guard.py  test_budget_service.py  test_budget_tree_service.py  test_calendar_feed.py  test_db_integration.py  test_deadlines_service.py  test_flow_service.py  test_forms_service.py  test_livevote_service.py  test_migrations.py  test_oauth_flow.py  test_pdf_pytex_contract.py  test_pdf_service.py  test_privacy.py  test_privacy_router.py  test_protocol_non_public.py  test_protokollant_timeline.py  test_voting_service.py
backend/tests/unit/: test_crypto.py  test_db.py  test_db_grants.py  test_deps.py  test_factories.py  test_misc_cov.py  test_no_eval.py  test_openapi_contract.py  test_settings.py  test_settings_storage_clamav_warning.py
backend/worker/: deadlines.py  mail.py  main.py  pdf.py  protocol.py  retention.py  scan.py  task_reminders.py  webhook.py
mcp/: .gitignore  README.md  pyproject.toml  requirements.lock.txt
mcp/antragsplattform_mcp/: __init__.py  auth.py  client.py  config.py  graphops.py  schemas.py  server.py  test_auth_endpoint_validation.py  test_client_safe_path.py
mcp/antragsplattform_mcp/tests/: test_config_token_dir.py
pytex/: .dockerignore  Dockerfile  README.md  app.py  entrypoint.sh  inkscape-shim.sh  pyproject.toml  requirements.txt  warmup.py
pytex/tests/: conftest.py  test_dep_pins.py  test_health.py  test_integration.py  test_protocol_patch.py  test_render.py  test_scrub.py
(+757 files in other folders)
