[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antragsplattform-backend"
version = "0.0.2"
description = "Antragsplattform backend (FastAPI + arq) — Skelett (T-02)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "arq>=0.26",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic[email]>=2.10",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "greenlet>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "basedpyright>=1.28",
    "testcontainers[postgres]>=4.8",
    "psycopg[binary]>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
# Alembic-Migrationen: dynamische op/context-API → vom Strict-Typecheck ausgenommen
# (Modelle/Logik bleiben geprüft). env.py wird separat typisiert gehalten.
exclude = ["migrations/versions", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
