[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antragsplattform-backend"
version = "0.0.2"
description = "Antragsplattform backend (FastAPI + arq) — Skelett (T-02)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "arq>=0.26",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic[email]>=2.10",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "greenlet>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "coverage[toml]>=7.6",
    "httpx>=0.28",
    # Test-Infra (testing.md §5): testcontainers (PG/Redis/MinIO), HTTP-Mock,
    # Zeit-Freeze, Pydantic/SQLAlchemy-Factories, Contract (Schemathesis).
    "testcontainers[postgres,redis]>=4.9",
    "respx>=0.22",
    "freezegun>=1.5",
    "polyfactory>=2.18",
    "schemathesis>=3.39",
    "ruff>=0.9",
    "basedpyright>=1.28",
    "testcontainers[postgres]>=4.8",
    "psycopg[binary]>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
# Alembic-Migrationen: dynamische op/context-API → vom Strict-Typecheck ausgenommen
# (Modelle/Logik bleiben geprüft). env.py wird separat typisiert gehalten.
exclude = ["migrations/versions", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default-Lauf = schnelle Unit-Suite (kein Docker). Integration/E2E opt-in via -m.
addopts = "-m 'not integration and not e2e'"
markers = [
    "integration: braucht testcontainers (PG/Redis/MinIO) — Docker erforderlich",
    "e2e: End-to-End gegen ephemeren Compose-Stack",
]

[tool.coverage.run]
branch = true
source = ["app", "worker"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Gesamt-Gate (testing.md §1): Backend ≥ 85 % (Lines+Branches).
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# Kritische Module: 100 % Branch als eigenes Gate (testing.md §1).
# Geprüft von scripts/coverage_critical.py gegen coverage.xml. Module entstehen in
# Folge-Tasks (auth/voting/flow/budget/webhooks/audit) — Gate aktiviert sich, sobald
# der jeweilige Pfad existiert; Negativ-Probe: tests/test_coverage_gate.py.
[tool.coverage_critical]
modules = [
    "app/modules/auth",
    "app/modules/voting",
    "app/modules/flow",
    "app/modules/budget",
    "app/modules/webhooks",
    "app/modules/audit",
]
min_branch_rate = 1.0
