[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antragsplattform-backend"
version = "0.0.2"
description = "Antragsplattform backend (FastAPI + arq) — Skelett (T-02)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "arq>=0.26",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic[email]>=2.10",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "greenlet>=3.1",
    # Auth (T-10): OIDC-Token-Exchange (httpx), id_token-Verify (PyJWT+crypto),
    # signierte Cookies/Tokens (itsdangerous).
    "httpx>=0.28",
    "pyjwt[crypto]>=2.10",
    "itsdangerous>=2.2",
    # Notifications/Mail (T-18): Jinja2-Templates (Subject/Body, i18n DE/EN),
    # async SMTP-Versand im arq-Worker (kein Blockieren der API).
    "jinja2>=3.1",
    "aiosmtplib>=3.0",
    # Files/Uploads (T-13): MIME-Sniffing (libmagic), MinIO/S3-Client + signierte URLs,
    # ClamAV-Scan via clamd. Alle drei werden lazy importiert (nur auf dem Upload-/
    # Worker-Pfad) — der Contract-CI (nur Postgres) lädt sie nie.
    "python-magic>=0.4",
    "minio>=7.2",
    "clamd>=1.0",
    # Multipart-Parsing für den Datei-Upload (FastAPI UploadFile/Form).
    "python-multipart>=0.0.18",
    # Live-Vote (T-16): Redis-PubSub-Fan-out + Cast-Lock (redis.asyncio) — bislang
    # transitiv über arq, jetzt direkt genutzt (Broker/Locker), daher explizit.
    "redis>=5.0",
    # Excel-Export (TASKS #2): Budget-Baum + Anträge als .xlsx (filter-aware).
    # Lazy importiert (nur auf dem Export-Pfad), reines Python-Paket.
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "coverage[toml]>=7.6",
    "httpx>=0.28",
    # Test-Infra (testing.md §5): testcontainers (PG/Redis/MinIO), HTTP-Mock,
    # Zeit-Freeze, Pydantic/SQLAlchemy-Factories, Contract (Schemathesis).
    "testcontainers[postgres,redis]>=4.9",
    "respx>=0.22",
    "freezegun>=1.5",
    "polyfactory>=2.18",
    # Contract-Runner gepinnt: schemathesis + hypothesis erzeugen pro Lauf zufällige
    # Fälle; ohne festen Versions- + Seed-Pin (s. CI `--seed`) wäre `be-contract`
    # nichtdeterministisch (mal grün, mal rot am selben Commit). Exakt pinnen, damit ein
    # roter Lauf reproduzierbar ist und nicht durch Tool-Updates wandert.
    "schemathesis==4.21.1",
    "hypothesis==6.155.2",
    "ruff>=0.9",
    "basedpyright>=1.28",
    "testcontainers[postgres]>=4.8",
    "psycopg[binary]>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
# Alembic-Migrationen: dynamische op/context-API → vom Strict-Typecheck ausgenommen
# (Modelle/Logik bleiben geprüft). env.py wird separat typisiert gehalten.
exclude = ["migrations/versions", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default-Lauf = schnelle Unit-Suite (kein Docker). Integration/E2E opt-in via -m.
addopts = "-m 'not integration and not e2e'"
markers = [
    "integration: braucht testcontainers (PG/Redis/MinIO) — Docker erforderlich",
    "e2e: End-to-End gegen ephemeren Compose-Stack",
]

[tool.coverage.run]
branch = true
source = ["app", "worker"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Gesamt-Gate (testing.md §1): Backend ≥ 85 % (Lines+Branches).
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# Kritische Module: 100 % Branch als eigenes Gate (testing.md §1).
# Geprüft von scripts/coverage_critical.py gegen coverage.xml. Pfade sind relativ
# zum Coverage-`source` (= `app`), wie in coverage.xml gelistet (z.B.
# `modules/auth/oidc.py`). Module entstehen in Folge-Tasks (auth/voting/flow/budget/
# webhooks/audit) — Gate aktiviert sich, sobald der jeweilige Pfad existiert;
# Negativ-Probe: tests/test_coverage_gate.py.
[tool.coverage_critical]
modules = [
    "modules/auth",
    "modules/voting",
    "modules/flow",
    "modules/budget",
    "modules/webhooks",
    "modules/audit",
]
min_branch_rate = 1.0
