[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antragsplattform-pytex"
version = "0.0.1"
description = "pytex render service — FastAPI-Wrapper um pytex_api.render_blob (T-21)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pytex-preprocessor==1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.9",
    "basedpyright>=1.28",
]

[tool.hatch.build.targets.wheel]
packages = ["app.py"]
only-include = ["app.py"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real pytex/tectonic build; opt-in via RUN_PYTEX_INTEGRATION=1",
]
